--- a/KLA Hackathon.ipynb
+++ b/KLA Hackathon.ipynb
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 94,
    "id": "74193a91-164c-4e11-a382-d8d06892f534",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,49 @@
     "    ep=[(-X,-Y),(X,Y)]\n",
     "    lam=np.linspace(0,1,n)\n",
     "    points=[(round(ep[0][0]*l+(1-l)*ep[1][0],4),round(ep[0][1]*l+(1-l)*ep[1][1],4)) for l in lam]\n",
-    "    return points"
+    "    with open(f'milestone1_{test}.txt','w') as f:\n",
+    "        for i in points:\n",
+    "            f.write(str(i)+'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "14fdec3e-c68b-4427-9d81-a6b6f8cf2f77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "milestone1(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "34e2688a-0c0b-4089-bb75-90c33258c16f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "milestone1(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "be39e9da-8a7a-4d59-a6d1-14389abf8df8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "milestone1(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "1337ecce-b8dc-4257-8497-d5f94411690f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "milestone1(4)"
    ]
   },
   {
