--- a/KLA Hackathon.ipynb
+++ b/KLA Hackathon.ipynb
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 133,
    "id": "74193a91-164c-4e11-a382-d8d06892f534",
    "metadata": {},
    "outputs": [],
@@ -322,232 +322,221 @@
     "    points=[(round(ep[0][0]*l+(1-l)*ep[1][0],4),round(ep[0][1]*l+(1-l)*ep[1][1],4)) for l in lam]\n",
     "    with open(f'milestone1_{test}.txt','w') as f:\n",
     "        for i in points:\n",
-    "            f.write(str(i)+'\\n')"
+    "            f.write(str(i)+'\\n')\n",
+    "    print(points)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 134,
    "id": "14fdec3e-c68b-4427-9d81-a6b6f8cf2f77",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(150.0, 0.0), (139.6552, 0.0), (129.3103, 0.0), (118.9655, 0.0), (108.6207, 0.0), (98.2759, 0.0), (87.931, 0.0), (77.5862, 0.0), (67.2414, 0.0), (56.8966, 0.0), (46.5517, 0.0), (36.2069, 0.0), (25.8621, 0.0), (15.5172, 0.0), (5.1724, 0.0), (-5.1724, 0.0), (-15.5172, 0.0), (-25.8621, 0.0), (-36.2069, 0.0), (-46.5517, 0.0), (-56.8966, 0.0), (-67.2414, 0.0), (-77.5862, 0.0), (-87.931, 0.0), (-98.2759, 0.0), (-108.6207, 0.0), (-118.9655, 0.0), (-129.3103, 0.0), (-139.6552, 0.0), (-150.0, 0.0)]\n"
+     ]
+    }
+   ],
    "source": [
     "milestone1(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 135,
    "id": "34e2688a-0c0b-4089-bb75-90c33258c16f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(106.066, 106.066), (82.4958, 82.4958), (58.9256, 58.9256), (35.3553, 35.3553), (11.7851, 11.7851), (-11.7851, -11.7851), (-35.3553, -35.3553), (-58.9256, -58.9256), (-82.4958, -82.4958), (-106.066, -106.066)]\n"
+     ]
+    }
+   ],
    "source": [
     "milestone1(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 136,
    "id": "be39e9da-8a7a-4d59-a6d1-14389abf8df8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(34.202, 93.9693), (31.3518, 86.1385), (28.5017, 78.3077), (25.6515, 70.4769), (22.8013, 62.6462), (19.9512, 54.8154), (17.101, 46.9846), (14.2508, 39.1539), (11.4007, 31.3231), (8.5505, 23.4923), (5.7003, 15.6615), (2.8502, 7.8308), (0.0, 0.0), (-2.8502, -7.8308), (-5.7003, -15.6615), (-8.5505, -23.4923), (-11.4007, -31.3231), (-14.2508, -39.1539), (-17.101, -46.9846), (-19.9512, -54.8154), (-22.8013, -62.6462), (-25.6515, -70.4769), (-28.5017, -78.3077), (-31.3518, -86.1385), (-34.202, -93.9693)]\n"
+     ]
+    }
+   ],
    "source": [
     "milestone1(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 137,
    "id": "1337ecce-b8dc-4257-8497-d5f94411690f",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "milestone1(4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "id": "dbe699f5-9d86-440e-b602-3a0d6fe41c4d",
-   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[(150.0, 0.0),\n",
-       " (139.6552, 0.0),\n",
-       " (129.3103, 0.0),\n",
-       " (118.9655, 0.0),\n",
-       " (108.6207, 0.0),\n",
-       " (98.2759, 0.0),\n",
-       " (87.931, 0.0),\n",
-       " (77.5862, 0.0),\n",
-       " (67.2414, 0.0),\n",
-       " (56.8966, 0.0),\n",
-       " (46.5517, 0.0),\n",
-       " (36.2069, 0.0),\n",
-       " (25.8621, 0.0),\n",
-       " (15.5172, 0.0),\n",
-       " (5.1724, 0.0),\n",
-       " (-5.1724, 0.0),\n",
-       " (-15.5172, 0.0),\n",
-       " (-25.8621, 0.0),\n",
-       " (-36.2069, 0.0),\n",
-       " (-46.5517, 0.0),\n",
-       " (-56.8966, 0.0),\n",
-       " (-67.2414, 0.0),\n",
-       " (-77.5862, 0.0),\n",
-       " (-87.931, 0.0),\n",
-       " (-98.2759, 0.0),\n",
-       " (-108.6207, 0.0),\n",
-       " (-118.9655, 0.0),\n",
-       " (-129.3103, 0.0),\n",
-       " (-139.6552, 0.0),\n",
-       " (-150.0, 0.0)]"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "milestone1(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "id": "cde53ee7-d6b3-4865-b72e-692f033f204d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(106.066, 106.066),\n",
-       " (82.4958, 82.4958),\n",
-       " (58.9256, 58.9256),\n",
-       " (35.3553, 35.3553),\n",
-       " (11.7851, 11.7851),\n",
-       " (-11.7851, -11.7851),\n",
-       " (-35.3553, -35.3553),\n",
-       " (-58.9256, -58.9256),\n",
-       " (-82.4958, -82.4958),\n",
-       " (-106.066, -106.066)]"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "milestone1(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "id": "ed01ae5d-1504-4f12-be7a-7c75b9ef2309",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(34.202, 93.9693),\n",
-       " (31.3518, 86.1385),\n",
-       " (28.5017, 78.3077),\n",
-       " (25.6515, 70.4769),\n",
-       " (22.8013, 62.6462),\n",
-       " (19.9512, 54.8154),\n",
-       " (17.101, 46.9846),\n",
-       " (14.2508, 39.1539),\n",
-       " (11.4007, 31.3231),\n",
-       " (8.5505, 23.4923),\n",
-       " (5.7003, 15.6615),\n",
-       " (2.8502, 7.8308),\n",
-       " (0.0, 0.0),\n",
-       " (-2.8502, -7.8308),\n",
-       " (-5.7003, -15.6615),\n",
-       " (-8.5505, -23.4923),\n",
-       " (-11.4007, -31.3231),\n",
-       " (-14.2508, -39.1539),\n",
-       " (-17.101, -46.9846),\n",
-       " (-19.9512, -54.8154),\n",
-       " (-22.8013, -62.6462),\n",
-       " (-25.6515, -70.4769),\n",
-       " (-28.5017, -78.3077),\n",
-       " (-31.3518, -86.1385),\n",
-       " (-34.202, -93.9693)]"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "milestone1(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "id": "ea46681e-87cd-421e-ab9c-524a8ab0a7e2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(86.6025, -50.0),\n",
-       " (80.829, -46.6667),\n",
-       " (75.0555, -43.3333),\n",
-       " (69.282, -40.0),\n",
-       " (63.5085, -36.6667),\n",
-       " (57.735, -33.3333),\n",
-       " (51.9615, -30.0),\n",
-       " (46.188, -26.6667),\n",
-       " (40.4145, -23.3333),\n",
-       " (34.641, -20.0),\n",
-       " (28.8675, -16.6667),\n",
-       " (23.094, -13.3333),\n",
-       " (17.3205, -10.0),\n",
-       " (11.547, -6.6667),\n",
-       " (5.7735, -3.3333),\n",
-       " (0.0, 0.0),\n",
-       " (-5.7735, 3.3333),\n",
-       " (-11.547, 6.6667),\n",
-       " (-17.3205, 10.0),\n",
-       " (-23.094, 13.3333),\n",
-       " (-28.8675, 16.6667),\n",
-       " (-34.641, 20.0),\n",
-       " (-40.4145, 23.3333),\n",
-       " (-46.188, 26.6667),\n",
-       " (-51.9615, 30.0),\n",
-       " (-57.735, 33.3333),\n",
-       " (-63.5085, 36.6667),\n",
-       " (-69.282, 40.0),\n",
-       " (-75.0555, 43.3333),\n",
-       " (-80.829, 46.6667),\n",
-       " (-86.6025, 50.0)]"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(86.6025, -50.0), (80.829, -46.6667), (75.0555, -43.3333), (69.282, -40.0), (63.5085, -36.6667), (57.735, -33.3333), (51.9615, -30.0), (46.188, -26.6667), (40.4145, -23.3333), (34.641, -20.0), (28.8675, -16.6667), (23.094, -13.3333), (17.3205, -10.0), (11.547, -6.6667), (5.7735, -3.3333), (0.0, 0.0), (-5.7735, 3.3333), (-11.547, 6.6667), (-17.3205, 10.0), (-23.094, 13.3333), (-28.8675, 16.6667), (-34.641, 20.0), (-40.4145, 23.3333), (-46.188, 26.6667), (-51.9615, 30.0), (-57.735, 33.3333), (-63.5085, 36.6667), (-69.282, 40.0), (-75.0555, 43.3333), (-80.829, 46.6667), (-86.6025, 50.0)]\n"
+     ]
     }
    ],
    "source": [
     "milestone1(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7a6f61f-a5c2-432d-a574-44986f09b8b6",
+   "metadata": {},
+   "source": [
+    "Milestone 2: Given the size of die, diameter of circle, die shift vector and center of a reference die, find:\n",
+    "* All the dies which are printed in the wafer with respect to the reference die.\n",
+    "* The coordinate of the lower left corner of the dies with respect to the center of the die.\n",
+    "  \n",
+    "<p>Arrange the output as a dictionary and print it.</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "7b9aa9db-f380-4878-823b-b783caaea205",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['WaferDiameter:300\\n',\n",
+       " 'DieSize:30x30\\n',\n",
+       " 'DieShiftVector:(0,0)\\n',\n",
+       " 'ReferenceDie:(15,15)']"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Importing data\n",
+    "data=[]\n",
+    "with open('Downloads/Kla hackathon/Milestone2/Input/Testcase1.txt','r') as f:\n",
+    "    for i in f:\n",
+    "        data.append(i)\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "a232b1b2-f81a-4ffb-96a6-6df27162fa1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "300.0"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diameter=float(data[0][14:][:-1])\n",
+    "diameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "403ae462-faa8-4b3b-b528-90d3857bcd3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(30, 30)"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "size=tuple(map(int,data[1][8:][:-1].split('x')))\n",
+    "size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "b1907c13-022d-45f0-983d-08d25e243b95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 0)"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shiftVector=tuple(map(int,data[2][16:][:-2].split(',')))\n",
+    "shiftVector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "f8a9cedc-e282-47e5-a945-1d40aa4d2897",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(15, 15)"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "referenceDie=tuple(map(int,data[3][14:][:-1].split(',')))\n",
+    "referenceDie"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fa7d3bc-0d59-45c9-8982-ee1e8b4bf570",
+   "id": "66d4b918-d10a-495f-a36d-d08fc1d673c5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Finding an approach to get the solution\n",
+    "#Step 1:LLC of die nearest to the center is called shiftVector. Find the LLC of the reference die using distance\n"
+   ]
   }
  ],
  "metadata": {
