Milestone 2 partially correct

--- a/KLA Hackathon.ipynb
+++ b/KLA Hackathon.ipynb
@@ -463,6 +463,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 142,
+   "id": "2eb8deec-fd9c-43b3-97f4-621bc35d8c89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "150.0"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "radius=diameter/2\n",
+    "radius"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 119,
    "id": "403ae462-faa8-4b3b-b528-90d3857bcd3b",
    "metadata": {},
@@ -529,14 +551,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "id": "66d4b918-d10a-495f-a36d-d08fc1d673c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0, 0.0)"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Finding an approach to get the solution\n",
+    "#LLC of die nearest to the center is called shiftVector. Find the LLC of the reference die using the given center of the die\n",
+    "LLCReference=(referenceDie[0]-size[0]/2,referenceDie[1]-size[1]/2)\n",
+    "LLCReference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "54cfe80b-6da3-43ca-a723-8f107d78f1cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0, 0.0)"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Finding out the die index of the die nearest to center\n",
+    "nearestIndex=tuple([(shiftVector[i]-LLCReference[i])/size[i] for i in range(2)])\n",
+    "nearestIndex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "18dc26c1-b888-4641-baf3-618830c155a6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Finding an approach to get the solution\n",
-    "#Step 1:LLC of die nearest to the center is called shiftVector. Find the LLC of the reference die using distance\n"
+    "#Generating the dies and checking if the fall inside the circle. If yes, add it to dictionary\n",
+    "#Checking - any one of corner points should fall inside the circle\n",
+    "def fallInCircle(point,r):\n",
+    "    if(point[0]**2+point[1]**2<r**2):\n",
+    "        return True\n",
+    "    return False"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "5efc0f82-076b-486c-813e-dd61bf67bb1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{(-4, -2): (-120.0, -60.0), (-4, -1): (-120.0, -30.0), (-4, 0): (-120.0, 0.0), (-4, 1): (-120.0, 30.0), (-4, 2): (-120.0, 60.0), (-3, -3): (-90.0, -90.0), (-3, -2): (-90.0, -60.0), (-3, -1): (-90.0, -30.0), (-3, 0): (-90.0, 0.0), (-3, 1): (-90.0, 30.0), (-3, 2): (-90.0, 60.0), (-3, 3): (-90.0, 90.0), (-2, -4): (-60.0, -120.0), (-2, -3): (-60.0, -90.0), (-2, -2): (-60.0, -60.0), (-2, -1): (-60.0, -30.0), (-2, 0): (-60.0, 0.0), (-2, 1): (-60.0, 30.0), (-2, 2): (-60.0, 60.0), (-2, 3): (-60.0, 90.0), (-2, 4): (-60.0, 120.0), (-1, -4): (-30.0, -120.0), (-1, -3): (-30.0, -90.0), (-1, -2): (-30.0, -60.0), (-1, -1): (-30.0, -30.0), (-1, 0): (-30.0, 0.0), (-1, 1): (-30.0, 30.0), (-1, 2): (-30.0, 60.0), (-1, 3): (-30.0, 90.0), (-1, 4): (-30.0, 120.0), (0, -4): (0.0, -120.0), (0, -3): (0.0, -90.0), (0, -2): (0.0, -60.0), (0, -1): (0.0, -30.0), (0, 0): (0.0, 0.0), (0, 1): (0.0, 30.0), (0, 2): (0.0, 60.0), (0, 3): (0.0, 90.0), (0, 4): (0.0, 120.0), (1, -4): (30.0, -120.0), (1, -3): (30.0, -90.0), (1, -2): (30.0, -60.0), (1, -1): (30.0, -30.0), (1, 0): (30.0, 0.0), (1, 1): (30.0, 30.0), (1, 2): (30.0, 60.0), (1, 3): (30.0, 90.0), (1, 4): (30.0, 120.0), (2, -4): (60.0, -120.0), (2, -3): (60.0, -90.0), (2, -2): (60.0, -60.0), (2, -1): (60.0, -30.0), (2, 0): (60.0, 0.0), (2, 1): (60.0, 30.0), (2, 2): (60.0, 60.0), (2, 3): (60.0, 90.0), (2, 4): (60.0, 120.0), (3, -3): (90.0, -90.0), (3, -2): (90.0, -60.0), (3, -1): (90.0, -30.0), (3, 0): (90.0, 0.0), (3, 1): (90.0, 30.0), (3, 2): (90.0, 60.0), (3, 3): (90.0, 90.0), (4, -2): (120.0, -60.0), (4, -1): (120.0, -30.0), (4, 0): (120.0, 0.0), (4, 1): (120.0, 30.0), (4, 2): (120.0, 60.0)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "maxX=int(radius/size[0])*4\n",
+    "maxY=int(radius/size[1])*4\n",
+    "DieIndex={}\n",
+    "for i in range(-maxX,maxX+1,1):\n",
+    "    for j in range(-maxY,maxY+1):\n",
+    "        LLCCurrent=(LLCReference[0]+size[0]*i,LLCReference[1]+size[1]*j)\n",
+    "        if (fallInCircle(LLCCurrent,radius)):\n",
+    "            DieIndex[(i,j)]=LLCCurrent\n",
+    "print(DieIndex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "8436e514-6b3d-4a43-a3fd-332a5ab221f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('milestone2_1.txt','w') as f:\n",
+    "    for i in DieIndex:\n",
+    "        f.write(str(i)+\" : \"+str(DieIndex[i])+\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "762702e6-eab3-4964-84f8-6f177cedda9b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
