--- a/KLA Hackathon.ipynb
+++ b/KLA Hackathon.ipynb
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 296,
    "id": "ace7d882-036e-4002-b2a9-53009c2a566a",
    "metadata": {},
    "outputs": [],
@@ -933,17 +933,21 @@
     "    DieIndex={}\n",
     "    for i in range(-maxX,maxX+1):\n",
     "        for j in range(-maxY,maxY+1):\n",
-    "            LLCCurrent=(LLCReference[0]+size[0]*i+dieStreet[0],LLCReference[1]+size[1]*j+dieStreet[1])\n",
+    "            LLCCurrent=[LLCReference[0]+size[0]*i+dieStreet[0],LLCReference[1]+size[1]*j+dieStreet[1]]\n",
+    "            if(i%diePerReticule[0]==0):\n",
+    "                LLCCurrent[0]+=reticuleSize[0]\n",
+    "            if(j%diePerReticule[1]==0):\n",
+    "                LLCCurrent[1]+=reticuleSize[0]\n",
     "            if (fallInCircle(LLCCurrent,shiftVector,radius)):\n",
     "                DieIndex[(i,j)]=LLCCurrent\n",
     "    with open(f'milestone3_{test}.txt','w') as f:\n",
     "        for i in DieIndex:\n",
-    "            f.write(str(i)+\" : \"+str(DieIndex[i])+\"\\n\")"
+    "            f.write(str(i)+\" : \"+str(tuple(DieIndex[i]))+\"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 297,
    "id": "3a1806f9-cf7a-466b-be86-cb62dcbcab2f",
    "metadata": {},
    "outputs": [],
